# tello-fiducial-localization

./: LICENSE  README.md
fiducial/: README.md
fiducial/aruco_detect/launch/: aruco_detect.launch.py
fiducial/aruco_detect/scripts/: create_markers.py
fiducial/aruco_detect/src/: aruco_detect.cpp
fiducial/eval_data_recorder/: CMakeLists.txt  package.xml
fiducial/eval_data_recorder/launch/: recorder.launch.py
fiducial/eval_data_recorder/src/: eval_data_recorder.cpp
fiducial/fiducial_localisation_3d/: CMakeLists.txt  package.xml
fiducial/fiducial_localisation_3d/src/: fiducial_localisation_3d.cpp
fiducial/fiducial_map_localisation/: CMakeLists.txt  package.xml
fiducial/fiducial_map_localisation/src/: fiducial_map_localisation.cpp
fiducial/fiducial_msgs/: CMakeLists.txt
fiducial/marker_publisher/: CMakeLists.txt  package.xml
fiducial/marker_publisher/src/: marker_publisher.cpp
fiducial/multi_marker_eval/: CMakeLists.txt  package.xml
fiducial/multi_marker_eval/src/: multi_marker_eval.cpp
tello_ros/: README.md
tello_ros/tello_bringup/: CMakeLists.txt  package.xml
tello_ros/tello_bringup/config/: tello.config.yaml
tello_ros/tello_bringup/launch/: tello_full.launch.py
tello_ros/tello_description/: package.xml  setup.py
tello_ros/tello_driver/: CMakeLists.txt  package.xml
tello_ros/tello_driver/include/tello_driver/: astar_planner.hpp  camera_publisher.h  movement_controller.h  movement_state.h  navigation.h  ros_params.h  state.h  state_publisher.h  tello_driver.h
tello_ros/tello_driver/src/: astar_planner.cpp  camera_publisher.cpp  movement_controller.cpp  navigation.cpp  state.cpp  state_publisher.cpp  tello_driver.cpp
tello_ros/tello_drone/: CMakeLists.txt  package.xml
tello_ros/tello_joy/: CMakeLists.txt  package.xml
tello_ros/tello_joy/config/: teleop_logitech.config.yaml  teleop_xbox.config.yaml
tello_ros/tello_joy/include/tello_joy/: joy_logitech.h  joy_xbox.h
tello_ros/tello_joy/launch/: teleop_logitech.launch.py  teleop_xbox.launch.py
tello_ros/tello_joy/src/: joy_logitech.cpp  joy_xbox.cpp
tello_ros/tello_meshes/: package.xml  setup.cfg  setup.py
tello_ros/tello_msgs/: CMakeLists.txt  package.xml
tello_ros/tello_msgs/msg/: BarometerStamped.msg  DroneStateStamped.msg  FlightState.msg  HeightStamped.msg  NavigationDiagnostics.msg
