<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>tello_driver</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="andre.kirsch@fh-bielefeld.de">André Kirsch</maintainer>
  <license>TODO: License declaration</license>

  <depend>rclcpp</depend>
  <depend>rclcpp_action</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>OpenCV</depend>
  <depend>ctello</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>tello_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>octomap_msgs</depend>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
